added bottom margin to clear table buttons

--- a/calorie-tracker/index.html
+++ b/calorie-tracker/index.html
@@ -85,7 +85,7 @@
                         </tbody>
                     </table>
                     <h4>Total Calories: <span id="totalCalories">0</span></h4>
-                    <button class="btn btn-danger btn-sm w-100 mt-5" id="showClearCalorieModal">Clear Table</button>
+                    <button class="btn btn-danger btn-sm w-100 mt-5 mb-5" id="showClearCalorieModal">Clear Table</button>
                 </div>
             </div>
 
@@ -126,7 +126,7 @@
                     </tbody>
                 </table>
                 <h4>Total Calories: <span id="totalTotalCalories">0</span></h4>
-                <button class="btn btn-danger btn-sm w-100 mt-5" id="showClearTotalsModal">Clear Table</button>
+                <button class="btn btn-danger btn-sm w-100 mt-5 mb-5" id="showClearTotalsModal">Clear Table</button>
             </div>
 
             <!-- Calc Tab -->
